k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mfs
  labels:
    app.kubernetes.io/name: multimodal-fashion-recommender
    app.kubernetes.io/part-of: mfs
