k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multimodal-fashion-recommender
  namespace: mfs
  labels:
    app: multimodal-fashion-recommender
spec:
  selector:
    app: multimodal-fashion-recommender
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
